smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/set-invalid-member.smithy
// Parse error at line 5, column 6 near `: `: Unexpected member of com.foo#MySet: 'foo'
namespace com.foo

set MySet {
  foo: smithy.api#String,
}
